# python-blockbuffer

./: .flake8  .style.yapf  pylintrc  pyproject.toml
blockbuffer/: blockbuffer.py  exceptions.py
tests/: test_blockbuffer.py
