#
# Package configuration file.
#
#
[build-system]
requires = ["setuptools ~= 67.0", "cython ~= 0.29.33", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["blockbuffer*"]

[project]
name = "blockbuffer"
version = "0.0.5"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Daniel Jones", email = "dan-code@erase.net" },
]
description = "Buffer samples into fixed-sized blocks, with overlap"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]
dev = [
    "pytest",
    "flake8",
    "yapf",
    "pylint",
    "isort",
]

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"

[tool.isort]
line_length = 120
profile = "black"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
known_first_party = ["blockbuffer"]
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
honor_noqa = true

[tool.yapf]
based_on_style = "google"
spaces_before_comment = 2
split_before_logical_operator = true
column_limit = 120
split_all_top_level_comma_separated_values = true
each_dict_entry_on_separate_line = true
force_multiline_dict = true
